# sprint-capacity-forecast

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  python-publish.yml
examples/: quickstart.py
src/forecast/: __init__.py  service.py
src/forecast/commit/: capacity.py
src/forecast/core/: types.py
src/forecast/correction/: correction.py
src/forecast/inflation/: inflation.py
tests/: test_commit_capacity.py
