[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast"
version = "0.3.1"
description = "Calibrated three-point (PERT) distributions with empirical-Bayes bias correction"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Emmett Miller (Sky U.K.)", email = "example@example.com" }]
keywords = ["PERT", "forecasting", "agile", "bias", "empirical-bayes", "calibration"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pylint>=2.17", "ruff>=0.6", "isort>=5.13"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.MASTER]
init-hook = "import sys, pathlib; sys.path[:0] = [str(pathlib.Path('src').resolve())]"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["I"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["forecast"]
known_third_party = ["pytest"]
